--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 
 {
-  "name": "nextn",
+  "name": "mathverse",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -15,7 +15,6 @@
   "dependencies": {
     "@genkit-ai/googleai": "^1.8.0",
     "@genkit-ai/next": "^1.8.0",
-    "@genkit-ai/openai": "^1.8.0",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
