--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "genkit": "^1.8.0",
     "katex": "^0.16.10",
     "lucide-react": "^0.475.0",
+    "mathjs": "^14.5.0",
     "next": "^15.3.2",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
