--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack -p 9002",
-    "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
-    "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
+    "dev": "pnpm genkit:dev & next dev --turbopack -p 9002",
+    "genkit:dev": "genkit start --tsx src/ai/dev.ts",
+    "genkit:watch": "genkit start --tsx --watch src/ai/dev.ts",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -38,7 +38,6 @@
     "@tanstack-query-firebase/react": "^1.0.5",
     "@tanstack/react-query": "^5.66.0",
     "@vercel/analytics": "^1.5.0",
-    "@xyflow/react": "12.6.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -47,7 +46,7 @@
     "genkit": "^1.8.0",
     "katex": "^0.16.10",
     "lucide-react": "^0.475.0",
-    "mathjs": "^14.5.0",
+    "mathjs": "^13.0.3",
     "next": "^15.3.2",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
