--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@react-three/fiber": "^8.17.1",
     "@tanstack-query-firebase/react": "^1.0.5",
     "@tanstack/react-query": "^5.66.0",
     "@vercel/analytics": "^1.5.0",
@@ -45,7 +46,7 @@
     "dotenv": "^16.5.0",
     "firebase": "^11.7.3",
     "genkit": "^1.8.0",
-    "katex": "^0.16.9",
+    "katex": "^0.16.10",
     "lucide-react": "^0.475.0",
     "mathjs": "^13.0.3",
     "next": "^15.3.2",
@@ -57,6 +58,7 @@
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.168.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
@@ -64,6 +66,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/three": "^0.168.0",
     "genkit-cli": "^1.8.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
