--- a/package.json
+++ b/package.json
@@ -51,9 +51,9 @@
     "mathjs": "^13.0.3",
     "next": "^15.3.2",
     "patch-package": "^8.0.0",
-    "react": "^18.3.1",
+    "react": "18.2.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "18.2.0",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
@@ -64,8 +64,8 @@
   "devDependencies": {
     "@types/katex": "^0.16.7",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "@types/three": "^0.168.0",
     "genkit-cli": "^1.8.0",
     "postcss": "^8",
