--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
-    "@react-three/drei": "9.122.0",
-    "@react-three/fiber": "8.18.0",
+    "@react-three/drei": "^9.92.3",
+    "@react-three/fiber": "^8.15.6",
     "@tanstack-query-firebase/react": "^1.0.5",
     "@tanstack/react-query": "^5.66.0",
     "@vercel/analytics": "^1.3.1",
@@ -52,25 +52,31 @@
     "mathjs": "^13.0.3",
     "next": "^15.3.2",
     "patch-package": "^8.0.0",
-    "react": "18.3.1",
+    "react": "18.2.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "18.3.1",
+    "react-dom": "18.2.0",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "three": "0.168.0",
+    "three": "^0.160.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/katex": "^0.16.7",
     "@types/node": "^20",
-    "@types/react": "^18.3.1",
-    "@types/react-dom": "^18.3.1",
-    "@types/three": "0.168.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "@types/three": "^0.160.0",
     "genkit-cli": "^1.8.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "pnpm": {
+    "overrides": {
+      "react": "18.2.0",
+      "react-dom": "18.2.0"
+    }
   }
 }
