--- a/package.json
+++ b/package.json
@@ -35,8 +35,6 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
-    "@react-three/drei": "^9.92.3",
-    "@react-three/fiber": "8.18.0",
     "@tanstack-query-firebase/react": "^1.0.5",
     "@tanstack/react-query": "^5.66.0",
     "@vercel/analytics": "^1.3.1",
@@ -58,7 +56,7 @@
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "three": "0.160.1",
+    "three": "^0.160.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
@@ -72,13 +70,13 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
- "pnpm": {
-  "overrides": {
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "@types/react": "18.2.0",
-    "@types/react-dom": "18.2.0",
-    "react-reconciler": "0.27.0"
+  "pnpm": {
+    "overrides": {
+      "react": "18.2.0",
+      "react-dom": "18.2.0",
+      "@types/react": "18.2.0",
+      "@types/react-dom": "18.2.0",
+      "react-reconciler": "0.27.0"
     }
   }
 }
