--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.160.1",
+    "three": "0.160.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
@@ -69,5 +69,14 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "pnpm": {
+    "overrides": {
+      "react": "18.2.0",
+      "react-dom": "18.2.0",
+      "@types/react": "18.2.0",
+      "@types/react-dom": "18.2.0",
+      "react-reconciler": "0.27.0"
+    }
   }
 }
