--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@tanstack-query-firebase/react": "^1.0.5",
     "@tanstack/react-query": "^5.66.0",
     "@vercel/analytics": "^1.3.1",
+    "@xyflow/react": "12.6.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -57,7 +58,7 @@
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "three": "0.160.1",
-    "zod": "^3.24.2"
+    "zod": "3.25.42"
   },
   "devDependencies": {
     "@types/katex": "^0.16.7",
