--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
     "firebase": "^11.8.1",
+    "@firebase/auth": "1.10.6",
     "genkit": "^1.8.0",
     "katex": "^0.16.10",
     "lucide-react": "^0.475.0",
