--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@types/react-dom": "18.2.0",
     "@types/three": "^0.160.0",
     "genkit-cli": "^1.8.0",
+    "mini-css-extract-plugin": "^2.9.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
