--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "mathverse",
   "version": "0.1.0",
@@ -12,8 +13,10 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@firebase/auth": "1.10.6",
     "@genkit-ai/googleai": "^1.8.0",
     "@genkit-ai/next": "^1.8.0",
+    "genkitx-openai": "0.6.0",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -44,7 +47,6 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
     "firebase": "^11.8.1",
-    "@firebase/auth": "1.10.6",
     "genkit": "^1.8.0",
     "katex": "^0.16.10",
     "lucide-react": "^0.475.0",
