--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
   },
   "dependencies": {
     "@firebase/auth": "1.10.6",
-    "@genkit-ai/googleai": "^1.8.0",
-    "@genkit-ai/next": "^1.8.0",
-    "genkitx-openai": "0.6.0",
+    "@genkit-ai/googleai": "1.11.0",
+    "@genkit-ai/next": "1.11.0",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -47,7 +46,7 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
     "firebase": "^11.8.1",
-    "genkit": "^1.8.0",
+    "genkit": "1.11.0",
     "katex": "^0.16.10",
     "lucide-react": "^0.475.0",
     "mathjs": "^13.0.3",
@@ -69,19 +68,10 @@
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.0",
     "@types/three": "^0.160.0",
-    "genkit-cli": "^1.8.0",
+    "genkit-cli": "1.11.0",
     "mini-css-extract-plugin": "^2.9.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
-  },
-  "pnpm": {
-    "overrides": {
-      "react": "18.2.0",
-      "react-dom": "18.2.0",
-      "@types/react": "18.2.0",
-      "@types/react-dom": "18.2.0",
-      "react-reconciler": "0.27.0"
-    }
   }
 }
